# agentfactoryupoa

./: .dockerignore  .env.example  .gitignore  =0.21  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-simple.txt  requirements.txt  start.bat
data/: tmp_verify.duckdb
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
scripts/: clear-vector-db.bat  clear_vector_db.py  create_test_pdfs.py  e2e_test.py  eval_retrieval.py  ingest_medical_catalog.py  reindex_faiss.py  start-backend.bat  start-frontend.bat
src/: chat.py  chat_intent.py  chat_structural.py  classifier.py  compressor.py  config.py  config_sections.py  controlplane.py  deadline_normalizer.py  evaluation.py  guardrails.py  history.py  ingestion.py  ingestion_cleaning.py  ingestion_parsers.py  legal_tree.py  lexical.py  llm.py  observability.py  pdf_pipeline.py  prompts.py  query_router.py  reranker.py  schemas.py  structured_store.py  summaries.py  table_planner.py  table_renderer.py  table_semantics.py  table_sql_builder.py  table_validator.py  tabular.py  utils.py  vectordb.py
templates/: index.html
tests/: conftest.py  test_app_routes.py  test_chat_module.py  test_classifier.py  test_compressor.py  test_config.py  test_deadline_normalizer.py  test_e2e.py  test_evaluation_module.py  test_guardrails.py  test_history_module.py  test_ingestion.py  test_ingestion_legal_tree.py  test_ingestion_module.py  test_intent_classifier.py  test_legal_tree.py  test_lexical.py  test_llm_module.py  test_prompts.py  (+15 more)
(+26 files in other folders)
