[project]
name = "agent-factory"
version = "0.1.0"
description = "RAG híbrida para documentos corporativos em PT-BR"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Vinicius Sousa" },
]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    # LLM
    "groq>=0.9",
    "anthropic>=0.25",
    # Embeddings
    "fastembed>=0.7",
    "sentence-transformers>=3.0",
    # Vector store
    "faiss-cpu>=1.8",
    # Text normalization
    "nltk>=3.8",
    # Document parsing
    "pymupdf>=1.24",
    "docling>=2.80",
    # Structured retrieval
    "duckdb>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-x --tb=short -q"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
